modal login completed

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#e53935">
-   <meta name="title" content="پابیشا | نقد و بررسی ، انتخاب و خرید آنلاین کتاب درسی">
-   <meta name="description" content="فروشگاه کتاب کانون(قلم چی) پر تخفیف ترین سایت خرید آنلاین کتاب کمک آموزشی کنکور، دهم، نهم و هشتم تجربی و ریاضی و انسانی . دانلود رایگان یک فصل از هر کتاب">
-   <meta name="keywords" content="کانون بوک, خرید کتاب قلمچی,خرید کتاب کانون, خرید کتاب قلمچی, خرید کتاب کمک آموزشی قلمچی, خرید کتاب کمک درسی قلمچی, خرید کتاب, خرید کتاب قلمچی, خرید کتاب قلمچی آنلاین, خرید آنلاین کتاب قلمچی, خرید ایترنتی کتاب قلمچی, سایت خرید کتاب قلمچی">
+  <meta name="title" content="پابیشا | نقد و بررسی ، انتخاب و خرید آنلاین کتاب درسی">
+  <meta name="description" content="فروشگاه کتاب کانون(قلم چی) پر تخفیف ترین سایت خرید آنلاین کتاب کمک آموزشی کنکور، دهم، نهم و هشتم تجربی و ریاضی و انسانی . دانلود رایگان یک فصل از هر کتاب">
+  <meta name="keywords"
+    content="کانون بوک, خرید کتاب قلمچی,خرید کتاب کانون, خرید کتاب قلمچی, خرید کتاب کمک آموزشی قلمچی, خرید کتاب کمک درسی قلمچی, خرید کتاب, خرید کتاب قلمچی, خرید کتاب قلمچی آنلاین, خرید آنلاین کتاب قلمچی, خرید ایترنتی کتاب قلمچی, سایت خرید کتاب قلمچی">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -39,10 +41,90 @@
                 <button type="button" class="close mr-auto ml-1 pt-4" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true">&times;</span>
                 </button>
-                <h5 class="modal-title pt-1" id="exampleModalLongTitle">ورود / ثبت نام</h5>
+                <h5 class="modal-title pt-1 text-white" id="exampleModalLongTitle">ورود / ثبت نام</h5>
               </div>
               <div class="modal-body">
-                ...
+                <div class="container">
+                  <button type="button" class="google-button text-center ml-auto mr-auto w-100">
+  <span class="google-button__icon">
+    <svg viewBox="0 0 366 372" xmlns="http://www.w3.org/2000/svg"><path d="M125.9 10.2c40.2-13.9 85.3-13.6 125.3 1.1 22.2 8.2 42.5 21 59.9 37.1-5.8 6.3-12.1 12.2-18.1 18.3l-34.2 34.2c-11.3-10.8-25.1-19-40.1-23.6-17.6-5.3-36.6-6.1-54.6-2.2-21 4.5-40.5 15.5-55.6 30.9-12.2 12.3-21.4 27.5-27 43.9-20.3-15.8-40.6-31.5-61-47.3 21.5-43 60.1-76.9 105.4-92.4z" id="Shape" fill="#EA4335"/><path d="M20.6 102.4c20.3 15.8 40.6 31.5 61 47.3-8 23.3-8 49.2 0 72.4-20.3 15.8-40.6 31.6-60.9 47.3C1.9 232.7-3.8 189.6 4.4 149.2c3.3-16.2 8.7-32 16.2-46.8z" id="Shape" fill="#FBBC05"/><path d="M361.7 151.1c5.8 32.7 4.5 66.8-4.7 98.8-8.5 29.3-24.6 56.5-47.1 77.2l-59.1-45.9c19.5-13.1 33.3-34.3 37.2-57.5H186.6c.1-24.2.1-48.4.1-72.6h175z" id="Shape" fill="#4285F4"/><path d="M81.4 222.2c7.8 22.9 22.8 43.2 42.6 57.1 12.4 8.7 26.6 14.9 41.4 17.9 14.6 3 29.7 2.6 44.4.1 14.6-2.6 28.7-7.9 41-16.2l59.1 45.9c-21.3 19.7-48 33.1-76.2 39.6-31.2 7.1-64.2 7.3-95.2-1-24.6-6.5-47.7-18.2-67.6-34.1-20.9-16.6-38.3-38-50.4-62 20.3-15.7 40.6-31.5 60.9-47.3z" fill="#34A853"/></svg>
+  </span>
+  <span class="google-button__text">ورود با اکانت گوگل</span>
+</button>
+<button type="button" class="google-button text-center ml-auto mr-auto w-100 bg-dark text-white mt-2">
+<span class="google-button__text">ثبت نام</span>
+</button>
+                  <form>
+                    <div class="form-group">
+                      <input class="text-right" type="text" required="required" />
+                      <label for="input" class="control-label">ایمیل</label><i class="bar"></i>
+                    </div>
+                    <div class="form-group">
+                      <input class="text-right" type="password" required="required" />
+                      <label for="input" class="control-label">رمز</label><i class="bar"></i>
+                    </div>
+                  </form>
+                  <a href="#"><p class="text-center">فراموشی رمز عبور؟</p></a>
+                  <div class="button-container">
+                    <button type="button" class="button"><span>ورود</span></button>
+                  </div>
+                </div>
+                <!-- material design form -->
+                  <!--
+                <div class="container">
+                  <form>
+                    <h1>Material Design formular</h1>
+                    <div class="form-group rtl">
+                      <select>
+                        <option>Value 1</option>
+                        <option>Value 2</option>
+                      </select>
+                      <label for="select" class="control-label">Selectbox</label><i class="bar"></i>
+                    </div>
+                    <div class="form-group">
+                      <input class="text-right" type="text" required="required" />
+                      <label for="input" class="control-label">Textfield</label><i class="bar"></i>
+                    </div>
+                    <div class="form-group">
+                      <textarea required="required"></textarea>
+                      <label for="textarea" class="control-label">Textarea</label><i class="bar"></i>
+                    </div>
+                    <div class="checkbox">
+                      <label>
+                        <input class="text-right" type="checkbox" checked="checked" />I'm the label from a checkbox<i class="helper"></i>
+                      </label>
+                    </div>
+                    <div class="checkbox">
+                      <label>
+                        <input class="text-right" type="checkbox" />I'm the label from a checkbox<i class="helper"></i>
+                      </label>
+                    </div>
+                    <div class="form-radio">
+                      <div class="radio">
+                        <label>
+                          <input class="text-right" type="radio" name="radio" checked="checked" />
+                          I'm the label from a radio button<i class="helper"></i>
+                        </label>
+                      </div>
+                      <div class="radio">
+                        <label>
+                          <input class="text-right" type="radio" name="radio" />I'm the label from a radio button<i class="helper"></i>
+                        </label>
+                      </div>
+                    </div>
+                    <div class="checkbox">
+                      <label>
+                        <input class="text-right" type="checkbox" />I'm the label from a checkbox<i class="helper"></i>
+                      </label>
+                    </div>
+                  </form>
+                  <div class="button-container">
+                    <button type="button" class="button"><span>Submit</span></button>
+                  </div>
+                </div>
+                -->
+                <!-- material design form -->
+
               </div>
 
             </div>
@@ -219,7 +301,9 @@
 
         <div class="row product-cart-pop">
           <div class="col-md-8 hover-cart-text">
-            <a href="#" class="text-dark"><p>کرم ضد آفتاب الارو سری Foundation Effect مدل Prote Prote Prote Prote</p></a>
+            <a href="#" class="text-dark">
+              <p>کرم ضد آفتاب الارو سری Foundation Effect مدل Prote Prote Prote Prote</p>
+            </a>
             <span class="c-price text-danger pt-1 text-center">
               <span class="c-price__value js-price-value pt-1">
                 ۱۰۸,۹۰۰
@@ -236,7 +320,9 @@
         <hr>
         <div class="row product-cart-pop">
           <div class="col-md-8 hover-cart-text">
-            <a href="#" class="text-dark"><p>کرم ضد آفتاب الارو سری Foundation Effect مدل Prote Prote Prote Prote</p></a>
+            <a href="#" class="text-dark">
+              <p>کرم ضد آفتاب الارو سری Foundation Effect مدل Prote Prote Prote Prote</p>
+            </a>
             <span class="c-price text-danger pt-1 text-center">
               <span class="c-price__value js-price-value pt-1">
                 ۱۰۸,۹۰۰
@@ -1113,43 +1199,58 @@
       </div>
     </section>
     <!-- special features -->
-    <section>
-      <div class="container-fluid">
+    <section class="hide-between">
+      <div class="container-fluid mt-2 mb-2">
         <div class="row">
           <div class="text-center d-inline-flex ml-auto mr-auto">
-            <div class="pr-2 pl-2 m-auto">
-              <img class="im-fluid" height="auto" width="50" src="https://www.digikala.com/static/files/8f570b58.svg" alt="">
-        <a href="#">
-           <h6 class="pt-3">تحویل اکسپرس</h6>
-         </a>
+            <div class="pr-5 pl-5 m-auto">
+              <a class="makeitbounce" href="#">
+                <img class="im-fluid" height="auto" width="50" src="https://www.digikala.com/static/files/8f570b58.svg" alt="">
+              </a>
+
+              <a href="#">
+                <h6 class="pt-3">تحویل اکسپرس</h6>
+              </a>
             </div>
             <div class="vl"></div>
-            <div class="pr-2 pl-2 m-auto">
-              <img class="im-fluid" height="auto" width="34" src="https://www.digikala.com/static/files/a9286d2f.svg" alt="">
-        <a href="#">
-           <h6 class="pt-3">پشتیبانی ۲۴ ساعته</h6>
-         </a>
+            <div class="pr-5 pl-5 m-auto">
+              <a class="makeitbounce" href="#">
+                <img class="im-fluid" height="auto" width="34" src="https://www.digikala.com/static/files/a9286d2f.svg" alt="">
+              </a>
+
+              <a href="#">
+                <h6 class="pt-3">پشتیبانی ۲۴ ساعته</h6>
+              </a>
             </div>
             <div class="vl"></div>
-            <div class="pr-2 pl-2 m-auto">
-              <img class="im-fluid" height="auto" width="34" src="https://www.digikala.com/static/files/22414818.svg" alt="">
-        <a href="#">
-           <h6 class="pt-3">پرداخت در محل</h6>
-         </a>
+            <div class="pr-5 pl-5 m-auto">
+              <a class="makeitbounce" href="#">
+                <img class="im-fluid" height="auto" width="34" src="https://www.digikala.com/static/files/22414818.svg" alt="">
+              </a>
+
+              <a href="#">
+                <h6 class="pt-3">پرداخت در محل</h6>
+              </a>
             </div>
             <div class="vl"></div>
-            <div class="pr-2 pl-2 m-auto">
-              <img class="im-fluid" height="auto" width="34" src="https://www.digikala.com/static/files/514926b1.svg" alt="">
-        <a href="#">
-           <h6 class="pt-3">۷ روز ضمانت بازگشت</h6>
-         </a>
+            <div class="pr-5 pl-5 m-auto">
+              <a class="makeitbounce" href="#">
+                <img class="im-fluid" height="auto" width="34" src="https://www.digikala.com/static/files/514926b1.svg" alt="">
+              </a>
+
+              <a href="#">
+                <h6 class="pt-3">۷ روز ضمانت بازگشت</h6>
+              </a>
             </div>
             <div class="vl"></div>
-            <div class="pr-2 pl-2 m-auto">
-              <img class="im-fluid" height="auto" width="31" src="https://www.digikala.com/static/files/fdb293e6.svg" alt="">
-        <a href="#">
-           <h6 class="pt-3">ضمانت اصل‌بودن کالا</h6>
-         </a>
+            <div class="pr-5 pl-5 m-auto">
+              <a class="makeitbounce" href="#">
+                <img class="im-fluid" height="auto" width="31" src="https://www.digikala.com/static/files/fdb293e6.svg" alt="">
+              </a>
+
+              <a href="#">
+                <h6 class="pt-3">ضمانت اصل‌بودن کالا</h6>
+              </a>
             </div>
           </div>
 
@@ -1260,15 +1361,17 @@
         </div>
         <div class="col-md-3 text-right">
           <h6 class="text-small">از تخفیف‌ها و جدیدترین‌های دیجی‌کالا باخبر شوید:</h6>
+          <hr>
           <div class="input-group mt-4 ltr">
             <div class="input-group-prepend">
               <button class="btn btn-primary  text-small" type="button">ارسال</button>
             </div>
             <input type="text" class="form-control text-right text-small" placeholder="آدرس ایمیل خود را وارد کنید" aria-label="" aria-describedby="basic-addon1">
           </div>
+          <hr>
           <div class="pt-3">
             <h6 class="text-small pb-2">دیجی‌کالا را در شبکه‌های اجتماعی دنبال کنید:</h6>
-            <div class="c-footer__social--instagram text-center">
+            <div class="c-footer__social--instagram text-center mb-4">
               <a class="text-white" href="https://www.instagram.com/digikalacom/">
                 <img width="25" src="https://www.digikala.com/static/files/0ae6d682.svg">
                 اینستاگرام دیجی‌کالا
