minor product size bug fixed

--- a/category.html
+++ b/category.html
@@ -484,7 +484,7 @@
           <div class="col-md-9 category-body mb-4">
             <div class="container-fluid bg-light rounded text-center">
               <div class="row text-center">
-                <div class="col-md-4 mt-3 mb-3">
+                <div class="col-md-4 col-xs-6 col-sm-6 mt-3 mb-3">
                   <div class="product-hover keep-it-tight p-2">
                     <a href="#">
                       <span class="c-product-box__discount-badge">
@@ -512,7 +512,7 @@
                     </a>
                   </div>
                 </div>
-                <div class="col-md-4 mt-3 mb-3">
+                <div class="col-md-4 col-xs-6 col-sm-6 mt-3 mb-3">
                   <div class="product-hover keep-it-tight p-2">
                     <a href="#">
                       <span class="c-product-box__discount-badge">
@@ -540,7 +540,7 @@
                     </a>
                   </div>
                 </div>
-                <div class="col-md-4 mt-3 mb-3">
+                <div class="col-md-4 col-xs-6 col-sm-6 mt-3 mb-3">
                   <div class="product-hover keep-it-tight p-2">
                     <a href="#">
                       <span class="c-product-box__discount-badge">
@@ -568,7 +568,7 @@
                     </a>
                   </div>
                 </div>
-                <div class="col-md-4 mt-3 mb-3">
+                <div class="col-md-4 col-xs-6 col-sm-6 mt-3 mb-3">
                   <div class="product-hover keep-it-tight p-2">
                     <a href="#">
                       <span class="c-product-box__new-badge">
@@ -595,7 +595,7 @@
                     </a>
                   </div>
                 </div>
-                <div class="col-md-4 mt-3 mb-3">
+                <div class="col-md-4 col-xs-6 col-sm-6 mt-3 mb-3">
                   <div class="product-hover keep-it-tight p-2">
                     <a href="#">
                       <img class="rounded product-pic out-of-stock" height="160" width="auto" src="https://images-na.ssl-images-amazon.com/images/I/81VnTWWiJcL._SX342_.jpg" alt="">
@@ -622,7 +622,7 @@
                     </a>
                   </div>
                 </div>
-                <div class="col-md-4 mt-3 mb-3">
+                <div class="col-md-4 col-xs-6 col-sm-6 mt-3 mb-3">
                   <div class="product-hover keep-it-tight p-2">
                     <a href="#">
                       <span class="c-product-box__discount-badge">
@@ -650,7 +650,7 @@
                     </a>
                   </div>
                 </div>
-                <div class="col-md-4 mt-3 mb-3">
+                <div class="col-md-4 col-xs-6 col-sm-6 mt-3 mb-3">
                   <div class="product-hover keep-it-tight p-2">
                     <a href="#">
                       <span class="c-product-box__discount-badge">
@@ -678,7 +678,7 @@
                     </a>
                   </div>
                 </div>
-                <div class="col-md-4 mt-3 mb-3">
+                <div class="col-md-4 col-xs-6 col-sm-6 mt-3 mb-3">
                   <div class="product-hover keep-it-tight p-2">
                     <a href="#">
                       <span class="c-product-box__discount-badge">
@@ -706,7 +706,7 @@
                     </a>
                   </div>
                 </div>
-                <div class="col-md-4 mt-3 mb-3">
+                <div class="col-md-4 col-xs-6 col-sm-6 mt-3 mb-3">
                   <div class="product-hover keep-it-tight p-2">
                     <a href="#">
                       <span class="c-product-box__new-badge">
@@ -733,7 +733,7 @@
                     </a>
                   </div>
                 </div>
-                <div class="col-md-4 mt-3 mb-3">
+                <div class="col-md-4 col-xs-6 col-sm-6 mt-3 mb-3">
                   <div class="product-hover keep-it-tight p-2">
                     <a href="#">
                       <img class="rounded product-pic out-of-stock" height="160" width="auto" src="https://images-na.ssl-images-amazon.com/images/I/81VnTWWiJcL._SX342_.jpg" alt="">
@@ -760,7 +760,7 @@
                     </a>
                   </div>
                 </div>
-                <div class="col-md-4 mt-3 mb-3">
+                <div class="col-md-4 col-xs-6 col-sm-6 mt-3 mb-3">
                   <div class="product-hover keep-it-tight p-2">
                     <a href="#">
                       <span class="c-product-box__discount-badge">
@@ -788,7 +788,7 @@
                     </a>
                   </div>
                 </div>
-                <div class="col-md-4 mt-3 mb-3">
+                <div class="col-md-4 col-xs-6 col-sm-6 mt-3 mb-3">
                   <div class="product-hover keep-it-tight p-2">
                     <a href="#">
                       <span class="c-product-box__discount-badge">
@@ -816,7 +816,7 @@
                     </a>
                   </div>
                 </div>
-                <div class="col-md-4 mt-3 mb-3">
+                <div class="col-md-4 col-xs-6 col-sm-6 mt-3 mb-3">
                   <div class="product-hover keep-it-tight p-2">
                     <a href="#">
                       <span class="c-product-box__discount-badge">
@@ -844,7 +844,7 @@
                     </a>
                   </div>
                 </div>
-                <div class="col-md-4 mt-3 mb-3">
+                <div class="col-md-4 col-xs-6 col-sm-6 mt-3 mb-3">
                   <div class="product-hover keep-it-tight p-2">
                     <a href="#">
                       <span class="c-product-box__new-badge">
@@ -871,7 +871,7 @@
                     </a>
                   </div>
                 </div>
-                <div class="col-md-4 mt-3 mb-3">
+                <div class="col-md-4 col-xs-6 col-sm-6 mt-3 mb-3">
                   <div class="product-hover keep-it-tight p-2">
                     <a href="#">
                       <img class="rounded product-pic out-of-stock" height="160" width="auto" src="https://images-na.ssl-images-amazon.com/images/I/81VnTWWiJcL._SX342_.jpg" alt="">
