--- a/category.html
+++ b/category.html
@@ -8,7 +8,8 @@
   <meta name="theme-color" content="#e53935">
   <meta name="title" content="پابیشا | نقد و بررسی ، انتخاب و خرید آنلاین کتاب درسی">
   <meta name="description" content="فروشگاه کتاب کانون(قلم چی) پر تخفیف ترین سایت خرید آنلاین کتاب کمک آموزشی کنکور، دهم، نهم و هشتم تجربی و ریاضی و انسانی . دانلود رایگان یک فصل از هر کتاب">
-  <meta name="keywords" content="کانون بوک, خرید کتاب قلمچی,خرید کتاب کانون, خرید کتاب قلمچی, خرید کتاب کمک آموزشی قلمچی, خرید کتاب کمک درسی قلمچی, خرید کتاب, خرید کتاب قلمچی, خرید کتاب قلمچی آنلاین, خرید آنلاین کتاب قلمچی, خرید ایترنتی کتاب قلمچی, سایت خرید کتاب قلمچی">
+  <meta name="keywords"
+    content="کانون بوک, خرید کتاب قلمچی,خرید کتاب کانون, خرید کتاب قلمچی, خرید کتاب کمک آموزشی قلمچی, خرید کتاب کمک درسی قلمچی, خرید کتاب, خرید کتاب قلمچی, خرید کتاب قلمچی آنلاین, خرید آنلاین کتاب قلمچی, خرید ایترنتی کتاب قلمچی, سایت خرید کتاب قلمچی">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -30,7 +31,7 @@
         <img src="https://www.pubisha.com/assets/images/logo-w.png" width="145" height="auto" class="d-inline-block align-top" alt="">
       </a>
       <div class="mr-auto pt-2">
-        <a href="#" class="pr-2"><i class="fas fa-user text-white" data-toggle="modal" data-target="#exampleModalCenter"></i></a>
+        <a href="#" class="pr-2" data-toggle="modal" data-target="#exampleModalCenter"><i class="fas fa-user text-white"></i></a>
 
         <!-- Modal -->
         <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
@@ -47,11 +48,13 @@
                   <button type="button" class="google-button text-center ml-auto mr-auto w-100">
                     <span class="google-button__icon">
                       <svg viewBox="0 0 366 372" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M125.9 10.2c40.2-13.9 85.3-13.6 125.3 1.1 22.2 8.2 42.5 21 59.9 37.1-5.8 6.3-12.1 12.2-18.1 18.3l-34.2 34.2c-11.3-10.8-25.1-19-40.1-23.6-17.6-5.3-36.6-6.1-54.6-2.2-21 4.5-40.5 15.5-55.6 30.9-12.2 12.3-21.4 27.5-27 43.9-20.3-15.8-40.6-31.5-61-47.3 21.5-43 60.1-76.9 105.4-92.4z"
+                        <path
+                          d="M125.9 10.2c40.2-13.9 85.3-13.6 125.3 1.1 22.2 8.2 42.5 21 59.9 37.1-5.8 6.3-12.1 12.2-18.1 18.3l-34.2 34.2c-11.3-10.8-25.1-19-40.1-23.6-17.6-5.3-36.6-6.1-54.6-2.2-21 4.5-40.5 15.5-55.6 30.9-12.2 12.3-21.4 27.5-27 43.9-20.3-15.8-40.6-31.5-61-47.3 21.5-43 60.1-76.9 105.4-92.4z"
                           id="Shape" fill="#EA4335" />
                         <path d="M20.6 102.4c20.3 15.8 40.6 31.5 61 47.3-8 23.3-8 49.2 0 72.4-20.3 15.8-40.6 31.6-60.9 47.3C1.9 232.7-3.8 189.6 4.4 149.2c3.3-16.2 8.7-32 16.2-46.8z" id="Shape" fill="#FBBC05" />
                         <path d="M361.7 151.1c5.8 32.7 4.5 66.8-4.7 98.8-8.5 29.3-24.6 56.5-47.1 77.2l-59.1-45.9c19.5-13.1 33.3-34.3 37.2-57.5H186.6c.1-24.2.1-48.4.1-72.6h175z" id="Shape" fill="#4285F4" />
-                        <path d="M81.4 222.2c7.8 22.9 22.8 43.2 42.6 57.1 12.4 8.7 26.6 14.9 41.4 17.9 14.6 3 29.7 2.6 44.4.1 14.6-2.6 28.7-7.9 41-16.2l59.1 45.9c-21.3 19.7-48 33.1-76.2 39.6-31.2 7.1-64.2 7.3-95.2-1-24.6-6.5-47.7-18.2-67.6-34.1-20.9-16.6-38.3-38-50.4-62 20.3-15.7 40.6-31.5 60.9-47.3z"
+                        <path
+                          d="M81.4 222.2c7.8 22.9 22.8 43.2 42.6 57.1 12.4 8.7 26.6 14.9 41.4 17.9 14.6 3 29.7 2.6 44.4.1 14.6-2.6 28.7-7.9 41-16.2l59.1 45.9c-21.3 19.7-48 33.1-76.2 39.6-31.2 7.1-64.2 7.3-95.2-1-24.6-6.5-47.7-18.2-67.6-34.1-20.9-16.6-38.3-38-50.4-62 20.3-15.7 40.6-31.5 60.9-47.3z"
                           fill="#34A853" /></svg>
                     </span>
                     <span class="google-button__text">ورود با اکانت گوگل</span>
@@ -141,7 +144,7 @@
 
         <a href="#"><i class="fas fa-shopping-cart text-white text-large hide-desktop-for-real"></i></a>
         <span class="badge badge-pill badge-danger hide-desktop-for-real">2</span>
-        <a href="#"><i class="fas fa-shopping-cart text-white text-large hide-between" onclick="cartFunc()"></i></a>
+        <a href="#" onclick="cartFunc()"><i class="fas fa-shopping-cart text-white text-large hide-between"></i></a>
         <span class="badge badge-pill badge-danger hide-between">2</span>
 
 
@@ -357,7 +360,7 @@
       <div class="container-fluid">
 
         <nav aria-label="breadcrumb">
-          <ol class="breadcrumb bg-light">
+          <ol class="breadcrumb bg-light text-xsmall">
             <li class="breadcrumb-item"><a class="pr-2" href="#">خانه</a></li>
             <li class="breadcrumb-item"><a class="pr-2" href="#">دسته بندی</a></li>
             <li class="breadcrumb-item active" aria-current="page"><a class="pr-2" href="#">کتاب های یک دسته خاص</a></li>
@@ -367,7 +370,7 @@
         <div class="row">
           <div class="col-md-3 hide-desktop text-center mb-3">
             <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modaler">
+            <button type="button" class="btn btn-primary btn-block text-small" data-toggle="modal" data-target="#modaler">
               جستجوی آسان و سریع
             </button>
 
@@ -381,10 +384,10 @@
                       <span aria-hidden="true">&times;</span>
                     </button>
                   </div>
-                  <div class="modal-body mb-5">
+                  <div class="modal-body mb-5 text-small">
                     <div class="bg-light rounded mb-3 mt-1">
                       <h6 class="text-center pt-4">فیلتر های مورد نظر خود را انتخاب کنید</h6>
-                      <div class="container w-75">
+                      <div class="container w-75 text-small">
                         <form>
                           <div class="form-group rtl">
                             <select>
@@ -436,7 +439,7 @@
           <div class="col-md-3 mb-5 hide-between">
             <div class="bg-light rounded mb-3 mt-1 side-bar">
               <h6 class="text-center pt-4">جستجوی پیشرفته</h6>
-              <div class="container w-75">
+              <div class="container w-75 text-small">
                 <form>
                   <div class="form-group rtl">
                     <select>
