--- a/category.html
+++ b/category.html
@@ -360,7 +360,7 @@
       <div class="container-fluid">
 
         <nav aria-label="breadcrumb">
-          <ol class="breadcrumb bg-light text-xsmall">
+          <ol class="breadcrumb bg-white text-xsmall">
             <li class="breadcrumb-item"><a class="pr-2" href="#">خانه</a></li>
             <li class="breadcrumb-item"><a class="pr-2" href="#">دسته بندی</a></li>
             <li class="breadcrumb-item active" aria-current="page"><a class="pr-2" href="#">کتاب های یک دسته خاص</a></li>
@@ -385,7 +385,7 @@
                     </button>
                   </div>
                   <div class="modal-body mb-5 text-small">
-                    <div class="bg-light rounded mb-3 mt-1">
+                    <div class="bg-white rounded mb-3 mt-1">
                       <h6 class="text-center pt-4">فیلتر های مورد نظر خود را انتخاب کنید</h6>
                       <div class="container w-75 text-small">
                         <form>
@@ -437,7 +437,7 @@
             </div>
           </div>
           <div class="col-md-3 mb-5 hide-between">
-            <div class="bg-light rounded mb-3 mt-1 side-bar">
+            <div class="bg-white rounded mb-3 mt-1 side-bar">
               <h6 class="text-center pt-4">جستجوی پیشرفته</h6>
               <div class="container w-75 text-small">
                 <form>
@@ -485,7 +485,7 @@
             </div>
           </div>
           <div class="col-md-9 category-body mb-4">
-            <div class="container-fluid bg-light rounded text-center">
+            <div class="container-fluid bg-white rounded text-center">
               <div class="row text-center">
                 <div class="col-md-4 col-xs-6 col-sm-6 mt-3 mb-3">
                   <div class="product-hover keep-it-tight p-2">
