--- a/single.html
+++ b/single.html
@@ -671,19 +671,19 @@
 
     <div class="container-fluid">
       <div class="row">
-        <div class="col-md-12">
-          <ul class="nav nav-tabs" id="myTab" role="tablist">
+        <div class="col-md-12 mb-5">
+          <ul class="nav nav-tabs pr-1" id="myTab" role="tablist">
             <li>
-              <a class="btn btn-primary ml-1 mb-1 active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">نقد و بررسی</a>
+              <a class="btn btn-primary small-text-responsive text-small ml-1 mb-1 active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">نقد و بررسی</a>
             </li>
             <li>
-              <a class="btn btn-primary ml-1 mb-1" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">مشخصات فنی</a>
+              <a class="btn btn-primary small-text-responsive text-small ml-1 mb-1" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">مشخصات فنی</a>
             </li>
             <li>
-              <a class="btn btn-primary mb-1" id="prosandcons-tab" data-toggle="tab" href="#prosandcons" role="tab" aria-controls="prosandcons" aria-selected="false">معایب و مزایا</a>
+              <a class="btn btn-primary small-text-responsive text-small ml-1 mb-1" id="prosandcons-tab" data-toggle="tab" href="#prosandcons" role="tab" aria-controls="prosandcons" aria-selected="false">معایب و مزایا</a>
             </li>
             <li>
-              <a class="btn btn-primary mb-1" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">نطرات</a>
+              <a class="btn btn-primary small-text-responsive text-small mb-1" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">نطرات</a>
             </li>
           </ul>
           <div class="tab-content bg-white" id="myTabContent">
@@ -706,13 +706,45 @@
 
             </div>
             <div class="tab-pane fade text-right p-4" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-              <h3>نقد و بررسی تخصصی</h3>
+              <h6>مشخصات کلی</h6>
+            <div class="container">
+              <div class="row">
+                  <div class="col-md-4">
+                    <p class="text-right"> <a class="text-danger" href="#">ابعاد :</a>7.8 × 74.1 × 157.6 میلی‌متر</p>
+                  </div>
+                  <div class="col-md-4">
+                    <p class="text-right"> <a class="text-danger" href="#">ابعاد :</a>7.8 × 74.1 × 157.6 میلی‌متر</p>
+                  </div>
+                  <div class="col-md-4">
+                    <p class="text-right"> <a class="text-danger" href="#">ابعاد :</a>7.8 × 74.1 × 157.6 میلی‌متر</p>
+                  </div>
+              </div>
+            </div>
             </div>
             <div class="tab-pane fade text-right p-4" id="contact" role="tabpanel" aria-labelledby="contact-tab">
-              <h3>نقد و بررسی تخصصی</h3>
-            </div>
+nazarat
+      </div>
             <div class="tab-pane fade text-right p-4" id="prosandcons" role="tabpanel" aria-labelledby="prosandcons-tab">
-              <h3>نقد و بررسی تخصصی</h3>
+              <div class="container">
+                <div class="row">
+                  <div class="col-md-6">
+                <h5 class="text-primary">نقاط قوت</h5>
+                <ul class="no-bulls">
+                  <li class="p-1"><i class="far fa-check-circle ml-2 text-primary"></i>صفحه‌نمایش عالی</li>
+                  <li class="p-1"><i class="far fa-check-circle ml-2 text-primary"></i>حسگر اثرانگشت اولتراسونیک</li>
+                  <li class="p-1"><i class="far fa-check-circle ml-2 text-primary"></i>دوربین سه‌گانه با عملکرد مطلوب</li>
+                  <li class="p-1"><i class="far fa-check-circle ml-2 text-primary"></i>دوربین سلفی دوگانه </li>
+                  <li class="p-1"><i class="far fa-check-circle ml-2 text-primary"></i>خوش‌ساخت و زیبا</li>
+                </ul>
+                  </div>
+                  <div class="col-md-6">
+                <h5 class="text-danger">نقاط ضعف</h5>
+                <ul class="no-bulls">
+                  <li class="p-1"><i class="far fa-times-circle ml-2 text-danger"></i>عمر باتری متوسط</li>
+                </ul>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
