--- a/single.html
+++ b/single.html
@@ -689,26 +689,32 @@
           <div class="tab-content bg-white" id="myTabContent">
             <div class="tab-pane fade show active text-right p-4" id="home" role="tabpanel" aria-labelledby="home-tab">
               <h3 class="pb-4">نقد و بررسی تخصصی</h3>
-              <p>برای این‌که بتوانیم Samsung Galaxy S10 Plus سامسونگ را به‌سادگی و به‌طور مختصر بررسی کنیم کافی است گوشی موبایل سال پیش این شرکت (S9 Plus) را در نظر بگیریم، حفره دوربین را روی نمایشگر آن قرار دهیم، دوربینی روی قاب پشتی اضافه کنیم و به‌روزرسانی‌های معمول را هم انجام دهیم. اما این تمام ماجرا نیست و ویژگی‌های اصلی این غول جدید سامسونگ را باید در جزئیاتی جست‌وجو کنیم که برای گوشی موبایل امروزی از اهمیت بسیار بالایی برخوردارند. صفحه‌نمایش فوق‌العاده زیبای AMOLED این گوشی در کنار دوربین‌های سلفی دوگانه با قابلیت فیلم‌برداری 4K کافی هستند تا یکی از بهترین گوشی‌های امسال را شاهد باشیم. در ادامه این محصول جدید، خاص و البته گران‌قیمت سامسونگ را به‌اختصار بررسی خواهیم کرد.</p>
+              <p>برای این‌که بتوانیم Samsung Galaxy S10 Plus سامسونگ را به‌سادگی و به‌طور مختصر بررسی کنیم کافی است گوشی موبایل سال پیش این شرکت (S9 Plus) را در نظر بگیریم، حفره دوربین را روی نمایشگر آن قرار دهیم، دوربینی روی قاب پشتی اضافه کنیم و
+                به‌روزرسانی‌های معمول را هم انجام دهیم. اما این تمام ماجرا نیست و ویژگی‌های اصلی این غول جدید سامسونگ را باید در جزئیاتی جست‌وجو کنیم که برای گوشی موبایل امروزی از اهمیت بسیار بالایی برخوردارند. صفحه‌نمایش فوق‌العاده زیبای AMOLED این
+                گوشی در کنار دوربین‌های سلفی دوگانه با قابلیت فیلم‌برداری 4K کافی هستند تا یکی از بهترین گوشی‌های امسال را شاهد باشیم. در ادامه این محصول جدید، خاص و البته گران‌قیمت سامسونگ را به‌اختصار بررسی خواهیم کرد.</p>
 
               <br>
 
               <h3 class="pb-4">طراحی و ساخت؛ زیبای خاص</h3>
-              <p>باید در همین ابتدا اعتراف کنیم Galaxy S10 Plus یک گوشی بسیار زیباست. البته شاید این تعریف کمی شخصی به نظر برسد اما ظاهر این گوشی آن‌قدر زیباست که جایی را برای گله و شکایت باقی نمی‌گذارد. در این گوشی دوست‌داشتنی صفحه‌نمایش تقریباً تمام قاب جلویی را پوشانده است. این گوشی ابعاد بزرگی دارد و با صفحه‌نمایش 6.4 در گروه فبلت‌ها جای می‌گیرد. اگر به دنبال خرید این گوشی هوشمند هستید، احتمالاً قبلاً هم گوشی بزرگی داشته‌اید و اندازه آن برایتان آزاردهنده نخواهد بود. البته لبه‌های خمیده و زیبای این گوشی باعث می‌شود که گوشی به‌راحتی در دستانتان جا شود. باریک بودن گوشی هم در درست گرفتن آن را آسان می‌کند. همان‌طور که قبلاً اشاره کردیم تغییر بزرگ در گوشی پلاس امسال سامسونگ در قاب پشتی گوشی و در چیدمان دوربین‌های آن نهفته است. در قاب پشتی سه دوربین در کنار یک فلش و سنسور ضربان قلب قرار گرفته‌اند. با اولین نگاه به این گوشی متوجه می‌شوید که در آن خبری از حسگر اثرانگشت نیست.
+              <p>باید در همین ابتدا اعتراف کنیم Galaxy S10 Plus یک گوشی بسیار زیباست. البته شاید این تعریف کمی شخصی به نظر برسد اما ظاهر این گوشی آن‌قدر زیباست که جایی را برای گله و شکایت باقی نمی‌گذارد. در این گوشی دوست‌داشتنی صفحه‌نمایش تقریباً
+                تمام قاب جلویی را پوشانده است. این گوشی ابعاد بزرگی دارد و با صفحه‌نمایش 6.4 در گروه فبلت‌ها جای می‌گیرد. اگر به دنبال خرید این گوشی هوشمند هستید، احتمالاً قبلاً هم گوشی بزرگی داشته‌اید و اندازه آن برایتان آزاردهنده نخواهد بود. البته
+                لبه‌های خمیده و زیبای این گوشی باعث می‌شود که گوشی به‌راحتی در دستانتان جا شود. باریک بودن گوشی هم در درست گرفتن آن را آسان می‌کند. همان‌طور که قبلاً اشاره کردیم تغییر بزرگ در گوشی پلاس امسال سامسونگ در قاب پشتی گوشی و در چیدمان
+                دوربین‌های آن نهفته است. در قاب پشتی سه دوربین در کنار یک فلش و سنسور ضربان قلب قرار گرفته‌اند. با اولین نگاه به این گوشی متوجه می‌شوید که در آن خبری از حسگر اثرانگشت نیست.
               </p>
 
               <br>
-              <p>اولین راه‌حل موفق برای ساده کردن فرمول زیبایی و کارایی بیشتر، تغییر مکان حسگر اثرانگشت در S10پلاس است. با توجه به امنیت بالای این راه برای باز کردن گوشی، حذف آن چندان منطقی به نظر نمی‌رسد. در این گوشی خبری از حسگر اثرانگشت روی قاب جلویی نیست و در عوض این حسگر زیر صفحه‌نمایش قرار گرفته است تا Galaxy S10 Plus از همه نظر به گوشی مدرن تبدیل شود.
-</p>
-<div class="text-center container p-2">
-  <img class="img-fluid rounded  shadow-lg" src="https://bucket-15.digicloud-oss.com/digikala-reviews/101461719.jpg?q=70" alt="">
-</div>
+              <p>اولین راه‌حل موفق برای ساده کردن فرمول زیبایی و کارایی بیشتر، تغییر مکان حسگر اثرانگشت در S10پلاس است. با توجه به امنیت بالای این راه برای باز کردن گوشی، حذف آن چندان منطقی به نظر نمی‌رسد. در این گوشی خبری از حسگر اثرانگشت روی قاب
+                جلویی نیست و در عوض این حسگر زیر صفحه‌نمایش قرار گرفته است تا Galaxy S10 Plus از همه نظر به گوشی مدرن تبدیل شود.
+              </p>
+              <div class="text-center container p-2">
+                <img class="img-fluid rounded  shadow-lg" src="https://bucket-15.digicloud-oss.com/digikala-reviews/101461719.jpg?q=70" alt="">
+              </div>
 
             </div>
             <div class="tab-pane fade text-right p-4" id="profile" role="tabpanel" aria-labelledby="profile-tab">
               <h6>مشخصات کلی</h6>
-            <div class="container">
-              <div class="row">
+              <div class="container">
+                <div class="row">
                   <div class="col-md-4">
                     <p class="text-right"> <a class="text-danger" href="#">ابعاد :</a>7.8 × 74.1 × 157.6 میلی‌متر</p>
                   </div>
@@ -718,30 +724,76 @@
                   <div class="col-md-4">
                     <p class="text-right"> <a class="text-danger" href="#">ابعاد :</a>7.8 × 74.1 × 157.6 میلی‌متر</p>
                   </div>
+                </div>
               </div>
             </div>
-            </div>
             <div class="tab-pane fade text-right p-4" id="contact" role="tabpanel" aria-labelledby="contact-tab">
-nazarat
-      </div>
+              <div class="container">
+                <div class="row">
+                  <div class="col-md-12">
+                    <h5>
+                      نظرات خود را در باره ی این محصول با دیگران به اشتراک بذارید!
+                    </h5>
+                    <p class="text-danger">
+                      نظرات بالای 50 لایک کد تخفیف 50 درصدی هدیه می گیرند !
+                    </p>
+                    <div class="container">
+                      <form>
+                        <div class="form-group">
+                          <textarea required="required"></textarea>
+                          <label for="textarea" class="control-label">جای نظر شما اینجاست</label><i class="bar"></i>
+                        </div>
+                      </form>
+                      <div class="button-container">
+                        <button type="button" class="button"><span>ارسال نظر</span></button>
+                      </div>
+                    </div>
+                    <div class="col-md-12">
+                      <div class="row">
+                        <img
+                          src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2275%22%20height%3D%2275%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2075%2075%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_16cdc9daf4d%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A10pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_16cdc9daf4d%22%3E%3Crect%20width%3D%2275%22%20height%3D%2275%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2219.3359375%22%20y%3D%2242%22%3E75x75%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
+                          alt="..." class="rounded-circle m-30 shadow-md">
+                        <p class="mt-4 pt-4 text-small">
+                          یک فرد معمولی
+                          <br>
+                          14/100/475
+                        </p>
+                        <div class="mt-1 comment-box text-small bg-light p-3 shadow-md">
+                          <p>
+                            لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف
+                            بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در
+                            زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد وزمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا
+                            مورد استفاده قرار گیرد.
+                          </p>
+                          <p>
+                            <a class="text-primary h6" href="#"><i class="far fa-thumbs-up"></i> 65</a>
+                            <a class="text-danger h6 mr-3" href="#"><i class="far fa-thumbs-down"></i> 59</a>
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
             <div class="tab-pane fade text-right p-4" id="prosandcons" role="tabpanel" aria-labelledby="prosandcons-tab">
               <div class="container">
                 <div class="row">
                   <div class="col-md-6">
-                <h5 class="text-primary">نقاط قوت</h5>
-                <ul class="no-bulls">
-                  <li class="p-1"><i class="far fa-check-circle ml-2 text-primary"></i>صفحه‌نمایش عالی</li>
-                  <li class="p-1"><i class="far fa-check-circle ml-2 text-primary"></i>حسگر اثرانگشت اولتراسونیک</li>
-                  <li class="p-1"><i class="far fa-check-circle ml-2 text-primary"></i>دوربین سه‌گانه با عملکرد مطلوب</li>
-                  <li class="p-1"><i class="far fa-check-circle ml-2 text-primary"></i>دوربین سلفی دوگانه </li>
-                  <li class="p-1"><i class="far fa-check-circle ml-2 text-primary"></i>خوش‌ساخت و زیبا</li>
-                </ul>
+                    <h5 class="text-primary">نقاط قوت</h5>
+                    <ul class="no-bulls">
+                      <li class="p-1"><i class="far fa-check-circle ml-2 text-primary"></i>صفحه‌نمایش عالی</li>
+                      <li class="p-1"><i class="far fa-check-circle ml-2 text-primary"></i>حسگر اثرانگشت اولتراسونیک</li>
+                      <li class="p-1"><i class="far fa-check-circle ml-2 text-primary"></i>دوربین سه‌گانه با عملکرد مطلوب</li>
+                      <li class="p-1"><i class="far fa-check-circle ml-2 text-primary"></i>دوربین سلفی دوگانه </li>
+                      <li class="p-1"><i class="far fa-check-circle ml-2 text-primary"></i>خوش‌ساخت و زیبا</li>
+                    </ul>
                   </div>
                   <div class="col-md-6">
-                <h5 class="text-danger">نقاط ضعف</h5>
-                <ul class="no-bulls">
-                  <li class="p-1"><i class="far fa-times-circle ml-2 text-danger"></i>عمر باتری متوسط</li>
-                </ul>
+                    <h5 class="text-danger">نقاط ضعف</h5>
+                    <ul class="no-bulls">
+                      <li class="p-1"><i class="far fa-times-circle ml-2 text-danger"></i>عمر باتری متوسط</li>
+                    </ul>
                   </div>
                 </div>
               </div>
